# io-uring-sync

./: .gitignore  .pre-commit-config.yaml  ADAPTIVE_CONCURRENCY_IMPLEMENTATION.md  BENCHMARK_IMPLEMENTATION_PLAN.md  COMPIO_METADATA_BUG_ANALYSIS.md  Cargo.toml  DELTA_COMPLETE.md  DEVELOPER.md  DOCUMENTATION_STANDARDS.md  IMPLEMENTATION_PLAN.md  KNOWN_BUGS.md  LICENSE  LICENSE-MIT  Makefile.toml  PHASE_3_1_SUMMARY.md  PIRATE_FEATURE_SUMMARY.md  PR_SUMMARY.md  README.md  RESTART_BENCHMARK_CLEAN.sh  RSYNC_COMPAT_STATUS.md  RUN_BENCHMARK_NOW.sh  STATUS_SUMMARY.md  TESTING_PRIORITIES.md  TESTS_TODO.md  TEST_COVERAGE.md  TEST_REPORT.md  VERDICT_COMPIO_METADATA_BUG.md  clippy.toml  deny.toml  dylint.toml  index.html  research.md  rust-toolchain.toml  test_copy.txt  test_large.txt  test_metadata_copy.txt  v6_vote.html
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  performance_issue.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci-improved.yml  ci.yml  release-improved.yml  release.yml
benchmark-results-quick-20251008_170452/: TEST_PARAMETERS.md  system_info.txt
benchmark-results-quick-20251008_170452/benchmark-results-quick-20251008_170452/01_rsync_10gb/: 01_rsync_10gb_run1_elapsed.txt  (+5 more)
benchmark-results-quick-20251008_172155/: TEST_PARAMETERS.md  system_info.txt
benchmark-results-quick-20251008_172155/01_rsync_large_files/: 01_rsync_large_files_run1_elapsed.txt  01_rsync_large_files_run2_elapsed.txt  01_rsync_large_files_run2_throughput.txt  01_rsync_large_files_run3_elapsed.txt  summary.txt
benchmark-results-quick-20251008_172738/: HARDWARE.md  README.md  TEST_PARAMETERS.md  system_info.txt
benchmark-results-quick-20251008_172738/01_rsync_large_files/: 01_rsync_large_files_run1_elapsed.txt  01_rsync_large_files_run1_throughput.txt  01_rsync_large_files_run2_elapsed.txt  01_rsync_large_files_run3_elapsed.txt  01_rsync_large_files_run3_throughput.txt  summary.txt
benchmark-results-quick-20251008_172738/02_arsync_large_files/: 02_arsync_large_files_run1_elapsed.txt  02_arsync_large_files_run1_throughput.txt  02_arsync_large_files_run2_elapsed.txt  02_arsync_large_files_run2_throughput.txt  02_arsync_large_files_run3_bytes.txt  02_arsync_large_files_run3_elapsed.txt  02_arsync_large_files_run3_throughput.txt  summary.txt
benchmark-results-quick-20251008_172738/03_rsync_1k_small/: 03_rsync_1k_small_run1_elapsed.txt  03_rsync_1k_small_run1_throughput.txt  03_rsync_1k_small_run2_elapsed.txt  03_rsync_1k_small_run2_throughput.txt  03_rsync_1k_small_run3_elapsed.txt  summary.txt
benchmark-results-quick-20251008_172738/04_arsync_1k_small/: 04_arsync_1k_small_run1_bytes.txt  04_arsync_1k_small_run1_elapsed.txt  04_arsync_1k_small_run1_throughput.txt
benchmarks/: QUICK_BENCHMARK_README.md  README.md  TEST_MATRIX.md  analyze_results.py  create_results_structure.sh  generate_testdata.sh  generate_testdata_quick.sh  hardware_inventory.sh  power_monitoring.sh  run_benchmarks.sh  run_benchmarks_quick.sh  smoke_test.sh  stress_test_small_files.sh
crates/compio-fs-extended/: Cargo.toml  README.md
crates/compio-fs-extended/docs/pirate/: README.pirate.md
crates/compio-fs-extended/src/: copy.rs  device.rs  directory.rs  error.rs  extended_file.rs  fadvise.rs  fallocate.rs  hardlink.rs  lib.rs  metadata.rs  ownership.rs  statx.rs  symlink.rs  xattr.rs
crates/compio-fs-extended/tests/: integration_tests.rs  simple_integration_tests.rs
crates/compio-sync/: Cargo.toml  README.md
crates/compio-sync/src/: lib.rs  semaphore.rs
crates/io-uring-extended/: Cargo.toml
crates/io-uring-extended/src/: lib.rs
crates/io-uring-extended/tests/: basic_operations.rs
crates/liburing-sys/: Cargo.toml
crates/liburing-sys/src/: lib.rs
docs/: BENCHMARKING_PLAN.md  BENCHMARK_QUICK_START.md  CHANGELOG.md  COMPIO_FS_EXTENDED_PLAN.md  DEVELOPER.md  GITHUB_ACTIONS_IMPROVEMENTS.md  IMPLEMENTATION_PLAN.md  INDUSTRY_STANDARDS.md  LINUX_KERNEL_CONTRIBUTIONS.md  LOCAL_VS_REMOTE_ARCHITECTURE.md  METADATA_PRESERVATION.md  NVME_ARCHITECTURE.md  PHASE_3_1_SUMMARY.md  PHASE_3_2_STATUS.md  PIPE_TESTING_STATUS.md  PIRATE_ART_PROMPTS.md  PIRATE_TRANSLATION.md  RSYNC_COMPARISON.md  RSYNC_COMPAT_DETAILED_DESIGN.md  RSYNC_IMPLEMENTATION_CHECKLIST.md  RSYNC_PROTOCOL_IMPLEMENTATION.md  SEMAPHORE_DESIGN.md  TESTING_PRIORITIES.md  TESTING_STRATEGY.md
docs/pirate/: CHANGELOG.pirate.md  README.pirate.md
docs/research/: FADVISE_VS_O_DIRECT.md  HASH_ALGORITHM_SURVEY.md  POWER_MEASUREMENT.md  README.md  REMOTE_SYNC_RESEARCH.md  RSYNC_PIPE_PROTOCOL.md  SSH_QUIC_HYBRID_PROTOCOL.md  research.md
examples/: hardlink_demo.rs
lints/ban-apis/: Cargo.toml  README.md  rust-toolchain.toml  test_api.rs
locales/en-US/: main.ftl
locales/qaa/: main.ftl
scripts/: pre-commit-check.sh
src/: adaptive_concurrency.rs  cli.rs  copy.rs  directory.rs  error.rs  i18n.rs  integration.rs  io_uring.rs  lib.rs  main.rs  progress.rs  semaphore.rs  sync.rs
src/protocol/: checksum.rs  handshake.rs  mod.rs  pipe.rs  quic.rs  rsync.rs  rsync_compat.rs  ssh.rs  transport.rs  varint.rs
tests/: README.md  compio_metadata_bug_demonstration.rs  comprehensive_metadata_tests.rs  directory_metadata_tests.rs  directory_xattr_tests.rs  edge_case_metadata_tests.rs  file_xattr_tests.rs  handshake_pipe_tests.rs  handshake_unit_tests.rs  hardlink_detection.rs  integrated_hardlink_copying.rs  integration_tests.rs  metadata_flag_tests.rs  performance_metadata_tests.rs  permission_test.rs  protocol_pipe_tests.rs  readme_structure_test.rs  rsync_checksum_tests.rs  rsync_compat.rs  rsync_delta_token_tests.rs  rsync_end_to_end_test.rs  rsync_file_list_compat_test.rs  rsync_file_list_integration_test.rs  rsync_format_unit_tests.rs  rsync_handshake_integration_test.rs  rsync_integration_tests.rs  test_data.rs
tests/common/: mod.rs  test_helpers.rs
tests/test_scripts/: basic_files.sh  deep_structure.sh  hardlink_scenarios.sh  permission_scenarios.sh  setup_test_directories.sh  symlink_scenarios.sh
tests/utils/: mod.rs  rsync_compat.rs
(+19 files in other folders)
