[package]
name = "arsync"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance async file copying utility using io_uring - modern rsync alternative"
license = "MIT"
repository = "https://github.com/yourusername/arsync"
keywords = ["io_uring", "file-copy", "async", "performance", "rsync"]
categories = ["command-line-utilities", "filesystem", "asynchronous"]
readme = "README.md"

[lib]
name = "arsync"
path = "src/lib.rs"

[[bin]]
name = "arsync"
path = "src/main.rs"

[workspace]
members = ["crates/compio-fs-extended", "crates/compio-sync"]

[dependencies]
# Core async runtime
compio = { version = "0.16", features = ["macros", "dispatcher"] }
futures = "0.3"

# CLI and error handling
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Logging and progress
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"

# System utilities
num_cpus = "1.0"
async-recursion = "1.0"
whoami = "1.0"
walkdir = "2.0"

# Checksums and hashing for rsync protocol
md5 = "0.7"
blake3 = "1.5"

# io_uring libraries
libc = "0.2"
# rio removed - using compio instead
# nix removed - using io_uring operations instead

# Extended io_uring operations
compio-fs-extended = { path = "crates/compio-fs-extended", features = ["xattr"] }

# Async synchronization primitives
compio-sync = { path = "crates/compio-sync" }

# Remote sync dependencies (optional)
tokio = { version = "1.0", features = ["process", "io-util", "rt", "fs", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }

# Build dependencies
[build-dependencies]
cc = "1.0"

# Benchmarking (optional)
criterion = { version = "0.7", features = ["html_reports"], optional = true }

[dev-dependencies]
# Testing
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.26"
walkdir = "2.0"
xattr = "1.0"

# Testcontainers for integration testing
testcontainers = "0.25"
tokio = { version = "1.0", features = ["full"] }

# Documentation and linting
mdbook = "0.4"
cargo-make = "0.37"
# cargo-deny = "0.17"  # Temporarily disabled due to rustsec compatibility issue
cargo-audit = "0.21"
# cargo-outdated = "0.17"  # Temporarily disabled
# cargo-expand = "1.0"  # Temporarily disabled

[features]
default = []
benchmarks = ["criterion"]
remote-sync = ["tokio", "async-trait"]
quic = ["remote-sync", "quinn", "rustls"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

