[package]
name = "arsync"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance async file copying utility using io_uring - modern rsync alternative"
license = "MIT"
repository = "https://github.com/yourusername/arsync"
keywords = ["io_uring", "file-copy", "async", "performance", "rsync"]
categories = ["command-line-utilities", "filesystem", "asynchronous"]
readme = "README.md"

[lib]
name = "arsync"
path = "src/lib.rs"

[[bin]]
name = "arsync"
path = "src/main.rs"

[workspace]
members = ["crates/compio-fs-extended", "crates/compio-sync"]

[dependencies]
# Core async runtime
compio = { version = "0.16", features = ["macros", "dispatcher"] }
futures = "0.3"

# CLI and error handling
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Logging and progress
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"

# System utilities
num_cpus = "1.0"
async-recursion = "1.0"

# i18n (internationalization)
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = "0.9"

# io_uring libraries
libc = "0.2"
# rio removed - using compio instead
# nix removed - using io_uring operations instead

# Extended io_uring operations
compio-fs-extended = { path = "crates/compio-fs-extended", features = ["xattr"] }

# Async synchronization primitives
compio-sync = { path = "crates/compio-sync" }

# Build dependencies
[build-dependencies]
cc = "1.0"

# Benchmarking (optional)
criterion = { version = "0.7", features = ["html_reports"], optional = true }

[dev-dependencies]
# Testing
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.26"
walkdir = "2.0"
xattr = "1.0"
pulldown-cmark = "0.13"

# Testcontainers for integration testing
testcontainers = "0.25"
tokio = { version = "1.0", features = ["full"] }

# Documentation and linting
mdbook = "0.4"
cargo-make = "0.37"
# cargo-deny = "0.17"  # Temporarily disabled due to rustsec compatibility issue
cargo-audit = "0.21"
# cargo-outdated = "0.17"  # Temporarily disabled
# cargo-expand = "1.0"  # Temporarily disabled

[features]
default = []
benchmarks = ["criterion"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

