[package]
name = "io-uring-extended"
version = "0.1.0"
edition = "2021"
description = "Minimal extensions to rio for copy_file_range, xattr, and getdents64 operations"
license = "MIT"
repository = "https://github.com/jmalicki/io_uring_sync"
documentation = "https://docs.rs/io-uring-extended"

[dependencies]
rio = "0.9"
iou = "0.3.3"
libc = "0.2"
thiserror = "1.0"
