[package]
name = "io-uring-extended"
version = "0.1.0"
edition = "2021"
description = "Minimal extensions to rio for copy_file_range, xattr, and getdents64 operations"
license = "MIT"
repository = "https://github.com/jmalicki/arsync"
documentation = "https://docs.rs/io-uring-extended"

[dependencies]
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
