[package]
name = "liburing-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level FFI bindings for liburing"
license = "MIT"
repository = "https://github.com/jmalicki/io_uring_sync"
documentation = "https://docs.rs/liburing-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = []
